--- a/Diamond Reserve/Base.lproj/Main.storyboard
+++ b/Diamond Reserve/Base.lproj/Main.storyboard
@@ -854,20 +854,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Stars.png" translatesAutoresizingMaskIntoConstraints="NO" id="u2h-Zc-hnj">
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Stars.png" translatesAutoresizingMaskIntoConstraints="NO" id="u2h-Zc-hnj">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="strip1.png" translatesAutoresizingMaskIntoConstraints="NO" id="K0K-8M-oQo">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome_full" translatesAutoresizingMaskIntoConstraints="NO" id="K0K-8M-oQo">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Chest" translatesAutoresizingMaskIntoConstraints="NO" id="wFJ-iU-549">
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Chest" translatesAutoresizingMaskIntoConstraints="NO" id="wFJ-iU-549">
                                 <rect key="frame" x="136" y="62" width="103" height="93"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="103" id="IQi-Fe-WoV"/>
                                     <constraint firstAttribute="height" constant="93" id="fmy-kr-IPv"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WELCOME!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IR5-JO-V3c">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WELCOME!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IR5-JO-V3c">
                                 <rect key="frame" x="118.5" y="178" width="139.5" height="43"/>
                                 <fontDescription key="fontDescription" name="UnicaOne-Regular" family="Unica One" pointSize="36"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -887,7 +887,7 @@
                                     <segue destination="fHW-Am-1Gr" kind="show" id="dhs-oY-zts"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rrn-Qu-pvj">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rrn-Qu-pvj">
                                 <rect key="frame" x="42.5" y="264" width="290" height="106.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="290" id="Jby-UQ-bKi"/>
@@ -947,23 +947,42 @@ IN THE MEANTIME LET’S TAKE A TOUR!</string>
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Stars.png" translatesAutoresizingMaskIntoConstraints="NO" id="cBb-qW-LTf">
+                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cBb-qW-LTf">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fXm-qA-cG2">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </scrollView>
-                            <imageView userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="strip1.png" translatesAutoresizingMaskIntoConstraints="NO" id="ZhK-kr-hCt">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="strip1.png" translatesAutoresizingMaskIntoConstraints="NO" id="ZhK-kr-hCt">
+                                <rect key="frame" x="22" y="20" width="331" height="577"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Diamond2" translatesAutoresizingMaskIntoConstraints="NO" id="fh2-kf-pcF">
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4SR-8J-haw">
+                                <rect key="frame" x="22" y="20" width="331" height="577"/>
+                            </imageView>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Diamond2" translatesAutoresizingMaskIntoConstraints="NO" id="fh2-kf-pcF">
                                 <rect key="frame" x="153" y="81" width="69" height="69"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="69" id="HPM-e6-cUi"/>
                                     <constraint firstAttribute="width" constant="69" id="aha-xn-Saz"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SEARCH &amp; ACCESS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uid-Wy-ymM">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fb7-jh-36x">
+                                <rect key="frame" x="9" y="12" width="57" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="NSs-dM-SB6"/>
+                                    <constraint firstAttribute="width" constant="57" id="u2n-qV-ml6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="UnicaOne-Regular" family="Unica One" pointSize="17"/>
+                                <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="BACK" image="Back"/>
+                                <connections>
+                                    <action selector="backButtonTapped:" destination="fHW-Am-1Gr" eventType="touchUpInside" id="91b-sw-Gat"/>
+                                    <action selector="backTapped:" destination="lUc-2p-JYU" eventType="touchUpInside" id="CFK-zF-wvI"/>
+                                    <action selector="backTapped:" destination="TTA-Pv-jBQ" eventType="touchUpInside" id="O7e-y0-2Uk"/>
+                                </connections>
+                            </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SEARCH &amp; ACCESS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uid-Wy-ymM">
                                 <rect key="frame" x="65" y="181" width="245" height="43"/>
                                 <fontDescription key="fontDescription" name="UnicaOne-Regular" family="Unica One" pointSize="36"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -982,7 +1001,7 @@ IN THE MEANTIME LET’S TAKE A TOUR!</string>
                                     <action selector="nextButtonTapped:" destination="fHW-Am-1Gr" eventType="touchUpInside" id="dHD-6N-msY"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9Y-W6-dFS">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9Y-W6-dFS">
                                 <rect key="frame" x="42.5" y="267" width="290" height="191.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="290" id="28G-pT-hSh"/>
@@ -1000,33 +1019,40 @@ TO SEE IF YOU QUALIFY </string>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="fh2-kf-pcF" firstAttribute="top" secondItem="Ip1-Z3-1nw" secondAttribute="bottom" constant="61" id="1NY-gk-96p"/>
                             <constraint firstItem="Uid-Wy-ymM" firstAttribute="centerX" secondItem="dKk-DM-PAD" secondAttribute="centerX" id="4ad-R1-GXy"/>
                             <constraint firstItem="F65-e7-ldz" firstAttribute="trailing" secondItem="Y9Y-W6-dFS" secondAttribute="trailing" id="5sw-qZ-vv3"/>
                             <constraint firstItem="cBb-qW-LTf" firstAttribute="height" secondItem="dKk-DM-PAD" secondAttribute="height" id="7nj-VZ-Rbb"/>
+                            <constraint firstItem="4SR-8J-haw" firstAttribute="top" secondItem="ZhK-kr-hCt" secondAttribute="top" id="Bu2-ca-tYr"/>
                             <constraint firstItem="cBb-qW-LTf" firstAttribute="centerY" secondItem="dKk-DM-PAD" secondAttribute="centerY" id="EYS-bd-41u"/>
+                            <constraint firstAttribute="trailing" secondItem="fXm-qA-cG2" secondAttribute="trailing" id="FeY-hZ-gKD"/>
                             <constraint firstItem="fSy-1h-InI" firstAttribute="top" secondItem="fXm-qA-cG2" secondAttribute="bottom" id="GdB-fR-PFt"/>
+                            <constraint firstItem="fb7-jh-36x" firstAttribute="top" secondItem="dKk-DM-PAD" secondAttribute="top" constant="12" id="IWd-fN-Nm0"/>
+                            <constraint firstItem="4SR-8J-haw" firstAttribute="bottom" secondItem="ZhK-kr-hCt" secondAttribute="bottom" id="IpW-Hc-cfU"/>
                             <constraint firstItem="fh2-kf-pcF" firstAttribute="centerX" secondItem="dKk-DM-PAD" secondAttribute="centerX" id="Ivw-Fz-pHt"/>
-                            <constraint firstItem="ZhK-kr-hCt" firstAttribute="leading" secondItem="dKk-DM-PAD" secondAttribute="leading" id="Jec-Pz-dKl"/>
+                            <constraint firstItem="ZhK-kr-hCt" firstAttribute="leading" secondItem="dKk-DM-PAD" secondAttribute="leading" constant="22" id="Jec-Pz-dKl"/>
+                            <constraint firstItem="4SR-8J-haw" firstAttribute="trailing" secondItem="ZhK-kr-hCt" secondAttribute="trailing" id="K7w-ah-84r"/>
+                            <constraint firstItem="fb7-jh-36x" firstAttribute="leading" secondItem="dKk-DM-PAD" secondAttribute="leading" constant="9" id="LHs-pf-s9d"/>
                             <constraint firstItem="fXm-qA-cG2" firstAttribute="top" secondItem="Ip1-Z3-1nw" secondAttribute="bottom" constant="-20" id="QBB-uB-Wlx"/>
                             <constraint firstItem="ZhK-kr-hCt" firstAttribute="top" secondItem="Ip1-Z3-1nw" secondAttribute="bottom" id="Vqw-7B-d4n"/>
                             <constraint firstItem="cBb-qW-LTf" firstAttribute="width" secondItem="dKk-DM-PAD" secondAttribute="width" id="Wda-gP-yfW"/>
                             <constraint firstItem="Y9Y-W6-dFS" firstAttribute="centerX" secondItem="cBb-qW-LTf" secondAttribute="centerX" id="Yey-xX-DKK"/>
-                            <constraint firstItem="fXm-qA-cG2" firstAttribute="leading" secondItem="dKk-DM-PAD" secondAttribute="leadingMargin" constant="-16" id="e2P-3p-lwp"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="fXm-qA-cG2" secondAttribute="trailing" constant="-16" id="ioX-WR-uey"/>
-                            <constraint firstAttribute="trailing" secondItem="ZhK-kr-hCt" secondAttribute="trailing" id="kq1-6w-eKs"/>
+                            <constraint firstItem="fXm-qA-cG2" firstAttribute="leading" secondItem="dKk-DM-PAD" secondAttribute="leading" id="fnT-pJ-VBz"/>
+                            <constraint firstItem="4SR-8J-haw" firstAttribute="leading" secondItem="ZhK-kr-hCt" secondAttribute="leading" id="hu2-Ih-i6s"/>
+                            <constraint firstAttribute="trailing" secondItem="ZhK-kr-hCt" secondAttribute="trailing" constant="22" id="kq1-6w-eKs"/>
                             <constraint firstItem="fSy-1h-InI" firstAttribute="top" secondItem="F65-e7-ldz" secondAttribute="bottom" constant="27" id="mBw-7Y-gWA"/>
                             <constraint firstItem="Uid-Wy-ymM" firstAttribute="top" secondItem="fh2-kf-pcF" secondAttribute="bottom" constant="31" id="p7P-Ym-kIR"/>
                             <constraint firstItem="cBb-qW-LTf" firstAttribute="centerX" secondItem="dKk-DM-PAD" secondAttribute="centerX" id="qhC-PH-QT4"/>
-                            <constraint firstItem="fSy-1h-InI" firstAttribute="top" secondItem="ZhK-kr-hCt" secondAttribute="bottom" id="vpr-Ye-Z4z"/>
+                            <constraint firstItem="fSy-1h-InI" firstAttribute="top" secondItem="ZhK-kr-hCt" secondAttribute="bottom" constant="70" id="vpr-Ye-Z4z"/>
                             <constraint firstItem="Y9Y-W6-dFS" firstAttribute="top" secondItem="Uid-Wy-ymM" secondAttribute="bottom" constant="43" id="zY3-ll-Wgr"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qE8-tQ-W7L"/>
                     <connections>
-                        <outlet property="frontImage" destination="ZhK-kr-hCt" id="jqq-dl-exF"/>
+                        <outlet property="backgroundImageView1" destination="ZhK-kr-hCt" id="ej4-nY-BZD"/>
+                        <outlet property="backgroundImageView2" destination="4SR-8J-haw" id="9B0-3r-Trs"/>
                         <outlet property="logoImage" destination="fh2-kf-pcF" id="9xm-ZJ-PmK"/>
                         <outlet property="mainText" destination="Y9Y-W6-dFS" id="e0f-R1-Q1y"/>
                         <outlet property="nextButton" destination="F65-e7-ldz" id="7ED-gw-cF2"/>
@@ -5196,6 +5222,7 @@ TO SEE IF YOU QUALIFY </string>
         <image name="stone.png" width="24" height="29"/>
         <image name="stone_unselected" width="24" height="29"/>
         <image name="strip1.png" width="375" height="425"/>
+        <image name="welcome_full" width="375" height="667"/>
         <image name="white_clock" width="22" height="22"/>
     </resources>
 </document>
